added images, updated index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <main>
     <h1>Wandering Kitsap</h1>
-    <img>
+    <img src="images/kitsaplandscape.jpg" alt="image of scenic landscape with water in foreground and mountain range in distance">
     <p>Hey there! This is where I'll be sharing what makes the Puget Sound region special.</p>
     <ul>
         <li><a href="explore.html">Discover</a> hidden gems.</li>
