added new changes to styles.css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,23 @@
     <link href="styles.css" rel="stylesheet">
     <title>Wandering Kitsap - Local travel blog</title>
 </head>
+
 <body>
-   <main>
-    <h1>Wandering Kitsap</h1>
-    <img src="images/kitsaplandscape.jpg" alt="image of scenic landscape with water in foreground and mountain range in distance">
-    <p>Hey there! This is where I'll be sharing what makes the Puget Sound region special.</p>
-    <ul>
-        <li><a href="explore.html">Discover</a> hidden gems.</li>
-        <li>Budget friendly advice and exploring.</li>
-        <li>Authentic experiences.</li>
-    </ul>
-    <h2>Let's Travel</h2>
-   </main> 
-   <footer>
-    <p>&copy; 2025 Ricardo Santillan</p>
-   </footer>
+    <main>
+        <h1>Wandering Kitsap</h1>
+        <img src="images/kitsaplandscape.jpg"
+            alt="image of scenic landscape with water in foreground and mountain range in distance">
+        <p>Hey there! This is where I'll be sharing what makes the Puget Sound region special.</p>
+        <ul>
+            <li><a href="explore.html">Discover</a> hidden gems.</li>
+            <li>Budget friendly advice and exploring.</li>
+            <li>Authentic experiences.</li>
+        </ul>
+        <h2>Let's Travel</h2>
+    </main>
+    <footer>
+        <p id="copyright">&copy; 2025 Ricardo Santillan</p>
+    </footer>
 </body>
+
 </html>
