--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <main>
-        <h1>Wandering Kitsap</h1>
+        <header class="page-title">
+            <h1>Wandering Kitsap</h1>
+        </header>
         <img src="images/kitsaplandscape.jpg"
             alt="image of scenic landscape with water in foreground and mountain range in distance">
         <p>Hey there! This is where I'll be sharing what makes the Puget Sound region special.</p>
@@ -20,7 +22,22 @@
             <li>Budget friendly advice and exploring.</li>
             <li>Authentic experiences.</li>
         </ul>
-        <h2>Let's Travel</h2>
+        <br>
+        <section>
+            <h2 id="explore-kitsap-title"><a href="explore.html">Explore Kitsap</a></h2>
+            <h3>Poulsbo: Little Norway</h3>
+            <p>Experience Norwegian and seaside charm.</p>
+            <h3>Bremerton: Naval History and More</h3>
+            <p>Discover the Puget Sound Naval Shipyard and vibrant downtown.</p>
+        </section>
+        <br>
+    <section>
+            <h2 id="recent-travels-title">Recent Travels</h2>
+            <h3>Exploring the trails of Fay Bainbridge Park</h3>
+            <p>Discover stunning waterfront views and easy hiking trails for a perfecr weekend stroll.</p>
+            <h3>A Day Trip to Port Gamble: History and Charm</h3>
+            <p>Step back in time in this historic Victorian town with antique shops and historic overlooks.</p>
+    </section>
     </main>
     <footer>
         <p id="copyright">&copy; 2025 Ricardo Santillan</p>
