changed image and css

--- a/explore.html
+++ b/explore.html
@@ -5,20 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore Kitsap - wandering kitsap</title>
-    <link rel="stylesheet" href="styles.css">
+   
     <link rel="stylesheet" href="explore.css">
+     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
+    <header class="page-title">
         <h1>Explore Kitsap</h1>
-        <a href="index.html">Home</a>
-        <a href="explore.html">Explore</a>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="explore.html">Explore</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
+            <h2>Kitsap Highlights</h2>
             <div id="column1">
-                <h2>Kitsap Highlights</h2>
                 <h3>Outdoor Adventures</h3>
                 <p>Hiking trails, kayaking spots, and scenic parks.</p>
                 <img src="images/Fay-Bainbridge.jpg" alt="Fay Bainbridge Park">
