--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
     <main>
         <header class="page-title">
             <h1>Wandering Kitsap</h1>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="explore.html">Explore</a></li>
+                </ul>
+            </nav>
+
         </header>
+        <div class="banner" >
         <img src="images/kitsaplandscape.jpg"
             alt="image of scenic landscape with water in foreground and mountain range in distance">
+        </div>
         <p>Hey there! This is where I'll be sharing what makes the Puget Sound region special.</p>
         <ul>
             <li><a href="explore.html">Discover</a> hidden gems.</li>
@@ -31,13 +40,13 @@
             <p>Discover the Puget Sound Naval Shipyard and vibrant downtown.</p>
         </section>
         <br>
-    <section>
+        <section>
             <h2 id="recent-travels-title">Recent Travels</h2>
             <h3>Exploring the trails of Fay Bainbridge Park</h3>
             <p>Discover stunning waterfront views and easy hiking trails for a perfecr weekend stroll.</p>
             <h3>A Day Trip to Port Gamble: History and Charm</h3>
             <p>Step back in time in this historic Victorian town with antique shops and historic overlooks.</p>
-    </section>
+        </section>
     </main>
     <footer>
         <p id="copyright">&copy; 2025 Ricardo Santillan</p>
