updated index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="explore.html">Explore</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="https://www.visitkitsap.com/" target="_blank">Visit Kitsap!</a></li>
                 </ul>
             </nav>
 
@@ -47,6 +49,7 @@
             <h3>A Day Trip to Port Gamble: History and Charm</h3>
             <p>Step back in time in this historic Victorian town with antique shops and historic overlooks.</p>
         </section>
+        <p><a href="#">Return to Top</a></p>
     </main>
     <footer>
         <p id="copyright">&copy; 2025 Ricardo Santillan</p>
