--- a/explore.html
+++ b/explore.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explore Kitsap - wandering kitsap</title>
-   
+    <title>Explore Kitsap - wandering kitsap</title> 
     <link rel="stylesheet" href="explore.css">
-     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -17,6 +16,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="explore.html">Explore</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="https://www.visitkitsap.com/" target="_blank">Visit Kitsap!</a></li>
             </ul>
         </nav>
     </header>
