Changed css to be responsive

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,23 +8,115 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="explore.css">
 </head>
+
 <body>
     <header class="page-title">
-        <h1>About</h1>
+        <h1>About Wandering Kitsap</h1>
         <nav class="navbar">
             <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="explore.html">Explore</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="https://www.visitkitsap.com/" target="_blank">Visit Kitsap!</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="explore.html">Explore</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="https://www.visitkitsap.com/" target="_blank">Visit Kitsap!</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <section>
-            <h2>Under Construction</h2>
-            <p>This page is currently under construction. Check back soon!</p>
-        </section>
+    <main class="about-main-flex-container">
+        <div class="about-card">
+            <section>
+                <h2>My Mission</h2>
+
+                <p>At Wandering Kitsap, my mission is simple: to inspire you to explore the hidden gems and vibrant
+                    communities right here in Kitsap County. I believe that adventure doesn't always require a long
+                    journey
+                    or a hefty budget. Sometimes, the most memorable experiences are just around the corner, waiting to
+                    be
+                    discovered. My goal is to provide authentic insights, practical tips, and a passion for local
+                    exploration that encourages everyone to step out and wander.</p>
+                <p>I'm dedicated to showcasing the diverse beauty of the Puget Sound region, from serene waterfronts and
+                    lush hiking trails to charming small towns and rich historical sites. I strive to highlight
+                    budget-friendly activities, ensuring that incredible experiences are accessible to all. Ultimately,
+                    I
+                    hope to foster a deeper connection between you and the unique spirit of Kitsap, creating lasting
+                    memories through genuine local adventures.</p>
+
+            </section>
+        </div>
+        <div class="about-card">
+            <section>
+                <h2>Who Am I?</h2>
+
+                <p>Hey there! I'm Ricardo, the voice and explorer behind Wandering Kitsap. My journey into local
+                    exploration
+                    began out of a simple curiosity: what amazing places exist right in my own backyard? Living in
+                    Kitsap
+                    County, I quickly realized there was a wealth of natural beauty, fascinating history, and welcoming
+                    communities that often go unnoticed by guidebooks and mainstream travel sites.</p>
+                <p>I'm not a professional travel writer, just someone with a deep love for discovery and a knack for
+                    finding
+                    those special, off-the-beaten-path spots. Whether it's tracking down the best viewpoint for a
+                    sunset,
+                    finding a peaceful trail for a morning hike, or unearthing a quirky local shop, I'm always on the
+                    lookout for new adventures. This blog is my way of sharing those discoveries with you, hoping to
+                    ignite
+                    your own sense of wanderlust.</p>
+                <p>My philosophy is that great travel doesn't have to be expensive. I'm always on the hunt for free or
+                    low-cost activities that offer maximum enjoyment. From picnics with a view to exploring local
+                    markets, I
+                    believe the best experiences are often those that connect you directly with the heart of a place
+                    without
+                    draining your wallet. Join me as we uncover the true essence of Kitsap, one adventure at a time!</p>
+
+            </section>
+        </div>
+        <div class="about-card">
+            <section>
+                <h2>What You'll Find Here</h2>
+
+                <ul>
+
+                    <li><strong>Detailed Guides:</strong> In-depth articles on specific locations, including tips on
+                        what to see, do, and
+                        where to eat (or pack a picnic!).</li>
+                    <li><strong>Budget-Friendly Adventures:</strong> Ideas for exploring Kitsap without breaking the
+                        bank, focusing on
+                        free parks, scenic drives, and affordable activities.</li>
+                    <li><strong>Hidden Gems:</strong> Discover lesser-known spots that offer unique experiences away
+                        from the crowds.
+                    </li>
+                    <li><strong>Seasonal Highlights:</strong> What's best to do in Kitsap during different times of the
+                        year, from spring
+                        blossoms to cozy winter retreats.</li>
+                    <li><strong>Community Spotlights:</strong> A look into the unique character and offerings of
+                        Kitsap's charming towns
+                        and neighborhoods.</li>
+                </ul>
+
+                <p>I'm constantly exploring and updating our content, so be sure to check back regularly for new
+                    articles
+                    and inspiration. Feel free to reach out with any questions, suggestions, or your own Kitsap
+                    discoveries!
+                </p>
+            </section>
+        </div>
+        <div class="about-card">
+            <section>
+                <h2>Connect With Us!</h2>
+
+                <p>I love hearing from fellow explorers! If you have questions about a specific trail, a recommendation
+                    for
+                    a new spot to check out, or just want to share your own Kitsap adventures, don't hesitate to get in
+                    touch. You can reach out through my contact form (coming soon!) or connect with us on social media.
+                </p>
+                <p>Thank you for stopping by Wandering Kitsap. Happy wandering!</p>
+
+            </section>
+        </div>
     </main>
+    <p><a href="#">Return to Top</a></p>
+    <footer>
+        <p id="copyright">&copy; 2025 Ricardo Santillan</p>
+    </footer>
 </body>
+
 </html>
