--- a/explore.html
+++ b/explore.html
@@ -22,22 +22,23 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Kitsap Highlights</h2>
-            <div id="column1">
-                <h3>Outdoor Adventures</h3>
-                <p>Hiking trails, kayaking spots, and scenic parks.</p>
+         <h2 id="head">Kitsap Highlights</h2>
+        <section class="container">  
+            <div class="grid-item">
                 <img src="images/Fay-Bainbridge.jpg" alt="Fay Bainbridge Park">
+                <h3 >Outdoor Adventures</h3>
+                <p>Hiking trails, kayaking spots, and scenic parks.</p>
+                
             </div>
-            <div id="column2">
+            <div class="grid-item">
+                <img src="images/poulsbo.jpg" alt="Poulsbo downtown">
                 <h3>Charming Towns</h3>
                 <p>Explore Poulsbo, Port Gamble, and more.</p>
-                <img src="images/poulsbo.jpg" alt="Poulsbo downtown">
             </div>
-            <div id="column3">
+            <div class="grid-item">
+                <img src="images/shipyaard.jpg" alt="Puget Naval Shipyard">
                 <h3>Local Culture</h3>
                 <p>Museums, art galleries, and historical sites.</p>
-                <img src="images/shipyaard.jpg" alt="Puget Naval Shipyard">
             </div>
         </section>
     </main>
