--- a/index.html
+++ b/index.html
@@ -10,29 +10,36 @@
 </head>
 
 <body>
-    <main>
-        <header class="page-title">
-            <h1>Wandering Kitsap</h1>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="explore.html">Explore</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="https://www.visitkitsap.com/" target="_blank">Visit Kitsap!</a></li>
-                </ul>
-            </nav>
-
-        </header>
-        <div class="banner" >
+    <header class="page-title">
+        <h1>Wandering Kitsap</h1>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="explore.html">Explore</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="https://www.visitkitsap.com/" target="_blank">Visit Kitsap!</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="banner">
         <img src="images/kitsaplandscape.jpg"
             alt="image of scenic landscape with water in foreground and mountain range in distance">
-        </div>
-        <p>Hey there! This is where I'll be sharing what makes the Puget Sound region special.</p>
-        <ul>
-            <li><a href="explore.html">Discover</a> hidden gems.</li>
-            <li>Budget friendly advice and exploring.</li>
-            <li>Authentic experiences.</li>
-        </ul>
+    </div>
+    <main class="main-content-flex-container" >
+        <section class="intro intro-flex-container">
+            <div class="intro-text">
+                <p>Welcome! This is where I'll be sharing what makes the Puget Sound region special.</p>
+            </div>
+            <div class="intro-p">
+            <p> Hey! I'm Ricardo, and I'm thrilled you've landed on Wandering Kitsap. Think
+                of this as your local friend, ready to show you all the cool spots – especially the ones you might
+                not find in a guidebook. My absolute favorite thing is helping you uncover those incredible, hidden
+                gems around our beautiful county. And don't worry about your wallet; I'm passionate about sharing
+                smart, budget-friendly ways to explore, so you can have amazing adventures without breaking the
+                bank. Ultimately, I want you to feel a real connection to Kitsap, diving into those truly authentic
+                experiences that make this place so special.</p>
+            </div>
+        </section>
         <br>
         <section>
             <h2 id="explore-kitsap-title"><a href="explore.html">Explore Kitsap</a></h2>
@@ -45,7 +52,7 @@
         <section>
             <h2 id="recent-travels-title">Recent Travels</h2>
             <h3>Exploring the trails of Fay Bainbridge Park</h3>
-            <p>Discover stunning waterfront views and easy hiking trails for a perfecr weekend stroll.</p>
+            <p>Discover stunning waterfront views and easy hiking trails for a perfect weekend stroll.</p>
             <h3>A Day Trip to Port Gamble: History and Charm</h3>
             <p>Step back in time in this historic Victorian town with antique shops and historic overlooks.</p>
         </section>
