Changed all files, added content, replaced font

--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <title>About - Wandering Kitsap</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="explore.css">
+    <link rel="icon" type="image/favicon" href="images/pine-tree-favicon.png">
+    <script src="https://kit.fontawesome.com/2f8b9489a8.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,7 +26,9 @@
     <main class="about-main-flex-container">
         <div class="about-card">
             <section>
-                <h2>My Mission</h2>
+                <h2>
+                    <i class="fa-solid fa-person-hiking"></i> My Mission
+                </h2>
 
                 <p>At Wandering Kitsap, my mission is simple: to inspire you to explore the hidden gems and vibrant
                     communities right here in Kitsap County. I believe that adventure doesn't always require a long
@@ -44,7 +48,10 @@
         </div>
         <div class="about-card">
             <section>
-                <h2>Who Am I?</h2>
+                <h2>
+                   <i class="fa-solid fa-person-walking-luggage"></i>
+                   Who Am I?
+                </h2>
 
                 <p>Hey there! I'm Ricardo, the voice and explorer behind Wandering Kitsap. My journey into local
                     exploration
@@ -71,7 +78,9 @@
         </div>
         <div class="about-card">
             <section>
-                <h2>What You'll Find Here</h2>
+                <h2>
+                    <i class="fa-solid fa-magnifying-glass-location"></i> What You'll Find Here
+                </h2>
 
                 <ul>
 
@@ -101,7 +110,9 @@
         </div>
         <div class="about-card">
             <section>
-                <h2>Connect With Us!</h2>
+                <h2>
+                <i class="fa-solid fa-people-group"></i> Connect With Us!
+                </h2>
 
                 <p>I love hearing from fellow explorers! If you have questions about a specific trail, a recommendation
                     for
