--- a/explore.html
+++ b/explore.html
@@ -7,6 +7,7 @@
     <title>Explore Kitsap - wandering kitsap</title> 
     <link rel="stylesheet" href="explore.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/favicon" href="images/pine-tree-favicon.png">
 </head>
 
 <body>
