--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Finding new adventures and sights in my local area! Current location: Kitsap.">
+    <link rel="icon" type="image/favicon" href="images/pine-tree-favicon.png">
     <link href="styles.css" rel="stylesheet">
     <title>Wandering Kitsap - Local travel blog</title>
 </head>
@@ -22,39 +23,47 @@
         </nav>
     </header>
     <div class="banner">
-        <img src="images/kitsaplandscape.jpg"
+        <img src="kitsap-cropped.jpg"
             alt="image of scenic landscape with water in foreground and mountain range in distance">
     </div>
-    <main class="main-content-flex-container" >
+    <main class="main-content-flex-container">
         <section class="intro intro-flex-container">
             <div class="intro-text">
                 <p>Welcome! This is where I'll be sharing what makes the Puget Sound region special.</p>
             </div>
             <div class="intro-p">
-            <p> Hey! I'm Ricardo, and I'm thrilled you've landed on Wandering Kitsap. Think
-                of this as your local friend, ready to show you all the cool spots – especially the ones you might
-                not find in a guidebook. My absolute favorite thing is helping you uncover those incredible, hidden
-                gems around our beautiful county. And don't worry about your wallet; I'm passionate about sharing
-                smart, budget-friendly ways to explore, so you can have amazing adventures without breaking the
-                bank. Ultimately, I want you to feel a real connection to Kitsap, diving into those truly authentic
-                experiences that make this place so special.</p>
+                <p> Hey! I'm Ricardo, and I'm thrilled you've landed on Wandering Kitsap. Think
+                    of this as your local friend, ready to show you all the cool spots – especially the ones you might
+                    not find in a guidebook. My absolute favorite thing is helping you uncover those incredible, hidden
+                    gems around our beautiful county. And don't worry about your wallet; I'm passionate about sharing
+                    smart, budget-friendly ways to explore, so you can have amazing adventures without breaking the
+                    bank. Ultimately, I want you to feel a real connection to Kitsap, diving into those truly authentic
+                    experiences that make this place so special.</p>
             </div>
         </section>
         <br>
-        <section>
-            <h2 id="explore-kitsap-title"><a href="explore.html">Explore Kitsap</a></h2>
-            <h3>Poulsbo: Little Norway</h3>
-            <p>Experience Norwegian and seaside charm.</p>
-            <h3>Bremerton: Naval History and More</h3>
-            <p>Discover the Puget Sound Naval Shipyard and vibrant downtown.</p>
+        <section class="explore-kitsap">
+            <h2 id="explore-kitsap-title">Explore Kitsap</h2>
+            <article>
+                <h3>Poulsbo: Little Norway</h3>
+                <p>Experience Norwegian and seaside charm.</p>
+            </article>
+            <article>
+                <h3>Bremerton: Naval History and More</h3>
+                <p>Discover the Puget Sound Naval Shipyard and vibrant downtown.</p>
+            </article>
         </section>
         <br>
-        <section>
+        <section class="recent-travels">
             <h2 id="recent-travels-title">Recent Travels</h2>
-            <h3>Exploring the trails of Fay Bainbridge Park</h3>
-            <p>Discover stunning waterfront views and easy hiking trails for a perfect weekend stroll.</p>
-            <h3>A Day Trip to Port Gamble: History and Charm</h3>
-            <p>Step back in time in this historic Victorian town with antique shops and historic overlooks.</p>
+            <article>
+                <h3>Exploring the trails of Fay Bainbridge Park</h3>
+                <p>Discover stunning waterfront views and easy hiking trails for a perfect weekend stroll.</p>
+            </article>
+            <article>
+                <h3>A Day Trip to Port Gamble: History and Charm</h3>
+                <p>Step back in time in this historic Victorian town with antique shops and historic overlooks.</p>
+            </article>
         </section>
         <p><a href="#">Return to Top</a></p>
     </main>
