changed index.html, added content to css, changed file paths

--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Finding new adventures and sights in my local area! Current location: Kitsap.">
     <link rel="icon" type="image/favicon" href="images/pine-tree-favicon.png">
-    <link href="styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     <title>Wandering Kitsap - Local travel blog</title>
 </head>
 
 <body>
     <header class="page-title">
-        <h1>Wandering Kitsap</h1>
+        <h1><span class="highlight-word">Wandering </span>Kitsap</h1>
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="explore.html">Explore</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="../html/explore.html">Explore</a></li>
+                <li><a href="../html/about.html">About</a></li>
                 <li><a href="https://www.visitkitsap.com/" target="_blank">Visit Kitsap!</a></li>
             </ul>
         </nav>
     </header>
     <div class="banner">
-        <img src="kitsap-cropped.jpg"
+        <img src="images/kitsap-cropped.jpg"
             alt="image of scenic landscape with water in foreground and mountain range in distance">
     </div>
     <main class="main-content-flex-container">
@@ -43,7 +43,7 @@
         </section>
         <br>
         <section class="explore-kitsap">
-            <h2 id="explore-kitsap-title">Explore Kitsap</h2>
+            <h2 id="explore-kitsap-title"><span class="highlight-explore">Explore </span>Kitsap</h2>
             <article>
                 <h3>Poulsbo: Little Norway</h3>
                 <p>Experience Norwegian and seaside charm.</p>
@@ -55,7 +55,7 @@
         </section>
         <br>
         <section class="recent-travels">
-            <h2 id="recent-travels-title">Recent Travels</h2>
+            <h2 id="recent-travels-title"><span class="highlight-recent">Recent </span>Travels</h2>
             <article>
                 <h3>Exploring the trails of Fay Bainbridge Park</h3>
                 <p>Discover stunning waterfront views and easy hiking trails for a perfect weekend stroll.</p>
