--- a/html/about.html
+++ b/html/about.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Wandering Kitsap</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="explore.css">
-    <link rel="icon" type="image/favicon" href="images/pine-tree-favicon.png">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/explore.css">
+    <link rel="icon" type="image/favicon" href="../images/pine-tree-favicon.png">
     <script src="https://kit.fontawesome.com/2f8b9489a8.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header class="page-title">
-        <h1>About Wandering Kitsap</h1>
+        <h1><span class="highlight-about">About </span> Wandering Kitsap</h1>
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="https://www.visitkitsap.com/" target="_blank">Visit Kitsap!</a></li>
