changed explore.html and added content to all pages

--- a/html/explore.html
+++ b/html/explore.html
@@ -39,7 +39,7 @@
                 <p>Explore Poulsbo, Port Gamble, and more.</p>
             </div>
             <div class="grid-item">
-                <img src="../images/shipyaard.jpg" alt="Puget Naval Shipyard">
+                <img src="../images/shipyard.jpg" alt="Puget Naval Shipyard">
                 <h3>Local Culture</h3>
                 <p>Museums, art galleries, and historical sites.</p>
             </div>
