--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="../html/explore.html">Explore</a></li>
-                <li><a href="../html/about.html">About</a></li>
+                <li><a href="./html/explore.html">Explore</a></li>
+                <li><a href="./html/about.html">About</a></li>
                 <li><a href="https://www.visitkitsap.com/" target="_blank">Visit Kitsap!</a></li>
             </ul>
         </nav>
